[package]
name = "anchor_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_nft"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = {version = "0.18.2"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
solana-program = "1.7.11"
serde = { version = "1.0", features = ["derive"] }
