[package]
name = "protectionMarket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "protection_market"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
mpl-auction = { path = "../../auction/program", features = [ "no-entrypoint" ]}
num-derive = "~0.3"
num-traits = "~0.2"
arrayref = "~0.3.6"
solana-program = "~1.9.5"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
mpl-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ]}
mpl-token-metadata = { version="~1.1.0", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
borsh = "~0.9.1"

[dev-dependencies]
solana-sdk = "~1.9.5"
solana-program-test = "~1.9.5"
