[package]
name = "token-metadata"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
solana-program = "~1.9.5"
mpl-token-vault = { version = "~0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
shank = { version = "~0.0.1" }

[dev-dependencies]
solana-sdk = "~1.9.5"
solana-program-test = "~1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
